# GameEngine

./: CMakeLists.txt  README.md
Chapter01/: CMakeLists.txt
Chapter01/src/: main.cpp
Chapter01/src/Game/: Game.cpp
Chapter01/src/Game/include/: Game.hpp
Chapter02/: CMakeLists.txt
Chapter02/src/: main.cpp
Chapter02/src/Actors/: Actor.hpp
Chapter02/src/Game/: Component.hpp  Game.cpp  Game.hpp
Chapter02/src/Math/: Math.hpp
Chapter02/src/SpriteComponents/: AnimSpriteComponent.cpp  AnimSpriteComponent.hpp  BGSpriteComponent.cpp  SpriteComponent.cpp  SpriteComponent.hpp
